# serves3

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.lock.license  Cargo.toml  README.md  Settings.toml.example  deny.toml  serves3.toml.example  serves3@.service
src/: main.rs  settings.rs  sizes.rs
templates/: index.html.tera
tests/: integration.rs
tests/common/: minio.rs  mod.rs
